# agent-deck

./: .cursorrules  .env.example  .eslintignore  .gitignore  AGENTS.md  PROJECT_OBJECTIVE_PROMPT.md  README.md  TODO.md  index.html  package-lock.json  package.json  requirements.txt  setup_launchpad.py  vite.config.ts
archive/legacy-agent-deck/: .gitignore  AGENTS.md  PROJECT_OBJECTIVE_PROMPT.md  README.md  REMOTE_BACKEND_POC.md  TODO.md  flake.nix  index.html  package-lock.json  package.json
directives/: 000_sequence_and_coverage.md  001_initial_setup.md  002_terminal_feasibility_spike.md  003_workspace_bootstrap.md  004_repo_registration_runtime.md  005_agent_profile_yaml.md  006_standalone_session_backend.md  007_terminal_grid_history.md  008_task_board_detail.md  009_worktree_warning_foundation.md  010_task_session_launch.md  011_changed_files_overlap.md  012_diff_review_panel.md  013_validation_commands.md  014_review_outcomes_cleanup.md  015_stuck_risky_warnings.md  016_runtime_token_metadata.md  017_log_redaction.md  018_mvp_hardening.md
docs/: ARCH.md  PRD.md  RESEARCH.md  deep-research-report.md  palette.txt  rundeck_agent_mission_control_spec.md  terminal-board-clean-slate-spec.md
docs/methodology/: debugging-guide.md  implementation-planning.md  review-gates.md
execution/: verify_setup.py
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: errors.rs  main.rs  models.rs  state.rs
src-tauri/src/commands/: mod.rs  presets.rs  sessions.rs  workspaces.rs
src-tauri/src/core/: mod.rs  storage.rs  terminal.rs
src-tauri/src/dictation/: stub.rs
src/app/: App.tsx
src/domain/: presets.ts  sessions.ts  themes.ts  workspaces.ts
src/services/: boardStorage.ts  events.ts  ipc.ts  mockBackend.ts  themeStorage.ts
src/styles/: base.css  buttons.css  composer.css  home.css  layout.css  main.css  settings.css  sidebar.css  (+5 more)
(+206 files in other folders)
